--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/coffee-icon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/coffee-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#f59e0b" />
     <title>LIN-Caisse - Sistema de Gestión</title>
   </head>
   <body>
