traduccion completa + Ico ok

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Favicon for modern browsers -->
     <link rel="icon" type="image/svg+xml" href="/coffee-icon.svg" />
+    <!-- Fallback favicon -->
+    <link rel="alternate icon" href="/favicon.svg" />
+    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/coffee-icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Theme color for mobile browsers -->
     <meta name="theme-color" content="#f59e0b" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LIN-Caisse - Sistema de Gestión</title>
   </head>
   <body>
