--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Theme color for mobile browsers -->
     <meta name="theme-color" content="#f59e0b" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LIN-Caisse - Sistema de Gestión</title>
+    <title>LIN-Fashion - Sistema de Gestión</title>
   </head>
   <body>
     <div id="root"></div>
