--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Favicon for modern browsers -->
-    <link rel="icon" type="image/svg+xml" href="/coffee-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fashion-icon.svg" />
     <!-- Fallback favicon -->
     <link rel="alternate icon" href="/favicon.svg" />
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/coffee-icon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/fashion-icon.svg" />
     <!-- Theme color for mobile browsers -->
-    <meta name="theme-color" content="#f59e0b" />
+    <meta name="theme-color" content="#ec4899" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LIN-Fashion - Sistema de Gestión</title>
   </head>
