Fix: Add manifest link and debug logs for PWA

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Theme color for mobile browsers -->
     <meta name="theme-color" content="#ec4899" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/manifest.webmanifest">
     <title>LIN-Fashion - Sistema de Gestión</title>
   </head>
   <body>
