--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Theme color for mobile browsers -->
   <meta name="theme-color" content="#ec4899" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIN-Fashion - Sistema de Gestión</title>
+  <title>Shoping by Lina - Sistema de Gestión</title>
 </head>
 
 <body>
