--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <!-- Favicon for modern browsers -->
-  <link rel="icon" type="image/svg+xml" href="/fashion-icon.svg" />
+  <link rel="icon" type="image/png" href="/pwa-192x192.png" />
   <!-- Fallback favicon -->
   <link rel="alternate icon" href="/favicon.svg" />
   <!-- Apple Touch Icon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/fashion-icon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <!-- Theme color for mobile browsers -->
   <meta name="theme-color" content="#ec4899" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
